# saveddit

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_PyPI.md  requirements.txt  setup.cfg
saveddit/: configuration.py  imgur_album_downloader.py  imgur_downloader.py  saveddit.py  subreddit_downloader.py
src/saveddit/: _version.py  configuration.py  multireddit_downloader.py  multireddit_downloader_config.py  saved_downloader.py  saveddit.py  search_config.py  search_subreddits.py  submission_downloader.py  subreddit_downloader.py  subreddit_downloader_config.py  user_downloader.py  user_downloader_config.py
