[metadata]
# replace with your username:
name = saveddit
version = 2.0.6
author = Pranav Srinivas Kumar
author_email = pranav.srinivas.kumar@gmail.com
description = Bulk Downloader for Reddit
long_description = file: README_PyPI.md
long_description_content_type = text/markdown
url = https://github.com/p-ranav/saveddit
project_urls =
    Bug Tracker = https://github.com/p-ranav/saveddit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    praw
    verboselogs
    requests
    colorama
    coloredlogs
    youtube_dl
    tqdm
    ffmpeg_python
    beautifulsoup4
    PyYAML

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    saveddit = saveddit.saveddit:main